<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
			 android:layout_height="match_parent"
			 android:scrollbarStyle="outsideInset"
			 android:paddingRight="@dimen/padding_right"
			 android:paddingLeft="@dimen/padding_left"
    	     android:paddingBottom="@dimen/padding_bottom">
	
  <LinearLayout android:orientation="vertical"
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content">
 
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/feed_back_form_label"
        style="@style/TextFeedbackTitle"/>
    
    <!-- Comment text -->
    <EditText android:id="@+id/txtFeedback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:hint="@string/feed_back_form_hint"
    	android:textSize="@dimen/text_size_small"
    	android:textColor="@android:color/black"
    	/>
 	
 	<RadioGroup
        android:id="@+id/radioTypeRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
 
        <RadioButton
            android:id="@+id/radioBug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_back_form_radio_bug" 
            />
 
        <RadioButton
            android:id="@+id/radioIdea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_back_form_radio_idea" />
        
        <RadioButton
            android:id="@+id/radioQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_back_form_radio_question" 
            android:checked="true" />
 
    </RadioGroup>
 	
 	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/feed_back_form_email_label"
        style="@style/TextFeedbackTitle"/>
 	
 	<EditText android:id="@+id/txtUserEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:inputType="textEmailAddress"
        android:singleLine="false"
        android:hint="@string/feed_back_form_email_hint"
    	android:textSize="@dimen/text_size_small"
    	android:textColor="@android:color/black"
    	/>
 	
	</LinearLayout>
</ScrollView>